--- a/src/app/choice-account/choice-account.page.html
+++ b/src/app/choice-account/choice-account.page.html
@@ -23,16 +23,10 @@
             <span class="divider line one-line"> o </span>
 
             <ion-button class="button-MusicCreators" [routerLink]="['/registration-musiccreators']" fill='outline'>
-                <ion-text class="text-MusicCreators">Music Creators</ion-text>
+                <ion-text class="text-MusicCreators">Music Management</ion-text>
                 <ion-icon class="icon-MusicCreators"> </ion-icon>
             </ion-button>
-
-            <span class="divider line one-line"> o </span>
-
-            <ion-button class="button-Crypto" [routerLink]="['/registration-crypto']" fill='outline'>
-                <ion-text class="text-Crypto">Crypto</ion-text>
-                <ion-icon class="icon-Crypto"> </ion-icon>
-            </ion-button>
+           
         </ion-col>
     </ion-grid>
 </ion-content>
