--- a/src/app/geolocalization/geolocalization.page.html
+++ b/src/app/geolocalization/geolocalization.page.html
@@ -1,7 +1,21 @@
-<h1>{{ title }}</h1>
+<ion-header [translucent]="true">
+    <ion-toolbar color="danger">
+        <ion-title>
+            Ionic Google Maps
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
 
-<!-- this creates a google map on the page with the given lat/lng from -->
-<!-- the component as the initial center of the map: -->
-<agm-map [latitude]="lat" [longitude]="lng">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-</agm-map>
+<ion-content [fullscreen]="true" class="ion-padding">
+
+    <input type="text" class="native-input sc-ion-input-ios" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+
+    <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+        <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true" (dragEnd)="markerDragEnd($event)"></agm-marker>
+    </agm-map>
+
+    <h5>Address: {{address}}</h5>
+    <div>Latitude: {{latitude}}</div>
+    <div>Longitude: {{longitude}}</div>
+
+</ion-content>
