--- a/src/app/privacypolicy/privacypolicy.page.html
+++ b/src/app/privacypolicy/privacypolicy.page.html
@@ -18,10 +18,12 @@
         Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.
     </h4>
     <a routerLink=""></a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <ion-button color="medium"><a style="color:white" href="../../assets/icon/Privacy_Policy_Shoma_APP (1) by EasePDF.htm">Preview Privacy Policy</a></ion-button>
+    <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <ion-button color="medium"><a style="color:white" href="../../assets/icon/EULA agreement Shoma  by EasePDF.htm">Preview EULA Agreement</a></ion-button>
     <br><br><br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <ion-button (click)="presentAlertCheckbox()">Click here to<br> Agree or Disagree Privacy Policy</ion-button>
+    <ion-button (click)="presentAlertCheckbox()">Click here to<br> Agree or Disagree Privacy Policy and EULA</ion-button>
     <br><br><br><br><br><br>
     <p class="version">
         Powered by Labelscoin™ </p>
