--- a/src/app/privacypolicy/privacypolicy.page.html
+++ b/src/app/privacypolicy/privacypolicy.page.html
@@ -14,7 +14,7 @@
     <h1>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Privacy Policy</h1>
 
-    <h4 class="version2">Last updated: December 29, 2020 This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You. We use
+    <h4 class="version2">Last updated: March 02, 2021 This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You. We use
         Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.
     </h4>
     <a routerLink=""></a>
@@ -24,7 +24,11 @@
     <ion-button color="medium"><a style="color:white" href="../../assets/icon/EULA agreement Shoma  by EasePDF.htm">Preview EULA Agreement</a></ion-button>
     <br><br><br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <ion-button (click)="presentAlertCheckbox()">Click here to<br> Agree or Disagree Privacy Policy and EULA</ion-button>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img class="testo1" src="../../assets/icon/regione.png">
     <p class="version">
-        Powered by Labelscoin™ </p>
+        Powered by Labelscoin™
+        <br> Coo-financed by
+        <br> Region Molise and European Union
+    </p>
 </ion-content>
